<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dialog_fragment_add_activity_activity_label"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/add_activity_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dialog_fragment_add_activity_amount_label"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_activity_amount_decrease"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/dialog_fragment_add_activity_amount_decrease_button" />

        <TextView
            android:id="@+id/add_activity_amount_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <Button
            android:id="@+id/add_activity_amount_increase"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/dialog_fragment_add_activity_amount_increase_button" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dialog_fragment_add_activity_point_label"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/add_activity_point_total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp" />

</LinearLayout>