<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="enjoysmile.com.shimasu.ActivityAddActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="72dp"
                android:theme="@style/AddActivityHeaderInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_add_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_add_name_hint"
                    android:inputType="textCapSentences"
                    android:textSize="34sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="32dp"
                android:paddingEnd="16dp"
                android:paddingStart="72dp"
                android:paddingTop="26dp"
                android:theme="@style/AddActivityHeaderInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_add_description_hint"
                    android:inputType="textCapSentences"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <!-- Activity type -->
                <RelativeLayout
                    android:id="@+id/activity_type_selector"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/activity_add_type_label_description"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:src="@drawable/ic_label_black_24px" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/activity_type_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="72dp"
                            android:paddingStart="72dp"
                            android:textColor="#E7000000" />

                        <TextView
                            android:id="@+id/activity_type_subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="72dp"
                            android:paddingStart="72dp"
                            android:textColor="#61000000"
                            android:textSize="14sp" />
                    </LinearLayout>

                </RelativeLayout>

                <!-- Activity points -->
                <RelativeLayout
                    android:id="@+id/activity_point_selector"
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/activity_add_point_label_description"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:src="@drawable/ic_swap_vert_black_24px" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/point_amount_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="72dp"
                            android:paddingStart="72dp"
                            android:textColor="#E7000000" />

                        <TextView
                            android:id="@+id/point_repeat_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="72dp"
                            android:paddingStart="72dp"
                            android:textColor="#61000000"
                            android:textSize="14sp" />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>

        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
